hphp/test/slow/enum_class/enum_class01.php.expectf
Fatal error: Expected constant expression for initializer in %s/enum_class01.php on line 9
